--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,6 @@
                 Flask Examples
             </a>
         </nav>
-        <h1>Hello Flask!</h1>
+        <script src="index.js"></script>
     </body>
 </html>
